spring-boot-playground-demo/devops/k8s/kubectl/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: spring-boot-playground-demo-pgsql-ss
spec:
  replicas: 1
  serviceName: spring-boot-playground-demo-pgsql-db
  selector:
    matchLabels:
      app: spring-boot-playground-demo-pgsql
  template:
    metadata:
      labels:
        app: spring-boot-playground-demo-pgsql
    spec:
      containers:
        - name: postgres
          image: postgres:14
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "510Mi"
              cpu: "1000m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-playground-demo-pgsql-db
spec:
  type: ClusterIP
  ports:
   - port: 5432
     targetPort: 5432
  selector:
    app: spring-boot-playground-demo-pgsql
