spring-boot-playground-demo/devops/k8s/kubectl/spring-boot-playground-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-playground-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-playground-demo
  template:
    metadata:
      labels:
        app: spring-boot-playground-demo
    spec:
      containers:
        - name: spring-boot-playground-docker
          image: ssuraci/spring-boot-playground-demo
          imagePullPolicy: "Never"
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-demo-playground-srv
spec:
  type: ClusterIP
  ports:
   - port: 8080
     targetPort: 8080
  selector:
    app: spring-boot-playground-demo
