spring-boot-playground-demo/devops/k8s/kubectl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-playground-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: playground.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: spring-boot-demo-playground-srv
                port:
                  number: 8080
